# aoc2015

./: pyproject.toml
day01/: day01.py  pyproject.toml
day02/: pyproject.toml
day02/day02/: day02.py
day03/: pyproject.toml
day03/day03/: day03.py
